fix: made alerts more readable

--- a/resources/assets/sass/components/_alert.scss
+++ b/resources/assets/sass/components/_alert.scss
@@ -7,11 +7,11 @@ $alert-colours: (
 );
 
 .alert {
-  @apply py-3 px-4 mb-4 rounded-md bg-white text-center text-slate-900;
+  @apply py-3 px-4 rounded-md bg-white text-center text-slate-900;
 
   @each $type, $colour in $alert-colours {
     &--#{$type} {
-      @apply bg-#{$colour}-200 text-sm border border-#{$colour}-400 text-#{$colour}-500;
+      @apply bg-#{$colour}-200 text-sm text-#{$colour}-600;
     }
   }
 
